--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,15 @@ Description: PKG_DESC.
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
+    dplyr,
+    ggplot2,
     golem (>= 0.3.2),
+    pkgload,
     shiny (>= 1.7.1)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
 URL: https://github.com/slu-aqua-omradesskydd-havsplanering/length-distribution-juvenile
 BugReports: https://github.com/slu-aqua-omradesskydd-havsplanering/length-distribution-juvenile/issues
+Depends: 
+    R (>= 2.10)
